--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vee-validate": "^4.14.7",
     "vue": "latest",
     "vue-router": "latest",
+    "vue-toastification": "^2.0.0-rc.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
