--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
+    "@nuxt/image": "^1.8.1",
     "@persian-tools/persian-tools": "^3.5.2",
     "nouislider": "^15.8.1",
     "nuxt": "^3.14.159",
