--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@nuxt/image": "^1.8.1",
     "@nuxtjs/color-mode": "^3.5.2",
     "@persian-tools/persian-tools": "^3.5.2",
+    "@pinia/nuxt": "^0.9.0",
     "nouislider": "^15.8.1",
     "nuxt": "^3.14.159",
     "nuxt-swiper": "1.2.2",
+    "pinia": "^2.3.0",
     "vee-validate": "^4.14.7",
     "vue": "latest",
     "vue-router": "latest",
