--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@pinia/nuxt": "^0.9.0",
     "nouislider": "^15.8.1",
     "nuxt": "^3.14.159",
-    "nuxt-swiper": "1.2.2",
+    "nuxt-swiper": "^1.2.2",
     "pinia": "^2.3.0",
     "vee-validate": "^4.14.7",
     "vue": "latest",
