--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vee-validate": "^4.14.7",
     "vue": "latest",
     "vue-router": "latest",
+    "vue-skeletor": "^1.0.6",
     "vue-toastification": "^2.0.0-rc.5",
     "yup": "^1.4.0"
   },
