--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/color-mode": "^3.5.2",
     "@persian-tools/persian-tools": "^3.5.2",
     "@pinia/nuxt": "^0.9.0",
+    "moment": "^2.30.1",
     "nouislider": "^15.8.1",
     "nuxt": "^3.14.159",
     "nuxt-swiper": "^1.2.2",
